2004-05-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (button_find_files): Use a custom image and
	label instead of a stock item as button content, so that it can be
	more clearly distinguished from button_find_matches.

2004-05-13  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade: Reintroduce tearoff menu items by manually
	inserting the necessary XML elements.

2004-05-12  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.cc: Remove the libgnome-vfsmm code already enclosed
	by #if 0 ... #endif.  It's all in the CVS history anyway.
	* src/filetree.cc: ditto.

2004-05-12  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/imagebutton.{cc,h}: Remove files as they're no longer used.
	* src/Makefile.am (regexxer_SOURCES): Remove imagebutton.{cc,h}.

2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/globalstrings.h (glade_mainwindow_filename): New string.

	* src/mainwindow.{cc,h}: Use libglademm to load the UI at runtime,
	and make the actual Gtk::Window a member of class MainWindow.
	Remove the old UI creation code.

	* src/controller.{cc,h} (Controller::load_xml): The menu bar,
	toolbar and action area is now contained in mainwindow.glade,
	and thus this new method wholly replaces the old code which
	generated those widgets.
	(ControlItem::add_widgets): New helper method intented to help
	reducing the code size.

	* src/filetree.cc (regexxer_create_file_tree): New function.
	* src/statusline.cc (regexxer_create_status_line): New function.

	* src/main.cc (main): Access the Gtk::Window by using the new
	accessor method Regexxer::MainWindow::get_window().

2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade: New file defining the main window's UI.
	* ui/Makefile.am (dist_glade_DATA): Add mainwindow.glade.

2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/globalstrings.h (glade_aboutdialog_filename): New string.

	* src/aboutdialog.{cc,h}: Use libglademm to load the dialog UI