@@ -505,7 +505,7 @@ bool FileTree::save_file_at_iter(const Gtk::TreeModel::iterator& iter,
       if (!*error_list)
         error_list->reset(new MessageList());
 
-      const Glib::ustring message = Util::compose(_("Failed to save file `%1': %2"),
+      const Glib::ustring message = Util::compose(_("Failed to save file \"%1\": %2"),
                                                   Util::filename_to_utf8_fallback(fileinfo->fullname),
                                                   error.what());
       (*error_list)->push_back(message);
@@ -998,7 +998,7 @@ void FileTree::load_file_with_fallback(const Gtk::TreeModel::iterator& iter,
   {
     g_assert(fileinfo->load_failed);
 
-    const Glib::ustring message = Util::compose(_("`%1' seems to be a binary file."),
+    const Glib::ustring message = Util::compose(_("\"%1\" seems to be a binary file."),
         Util::filename_to_utf8_fallback(Glib::path_get_basename(fileinfo->fullname)));
 
     fileinfo->buffer = FileBuffer::create_with_error_message(
