@@ -511,7 +511,7 @@ void PrefDialog::on_entry_fallback_activate()
   }
   else
   {
-    const Glib::ustring message = Util::compose(_("`%1' is not a valid encoding."),
+    const Glib::ustring message = Util::compose(_("\"%1\" is not a valid encoding."),
                                                 fallback_encoding);
     Gtk::MessageDialog error_dialog (*dialog_, message, Gtk::MESSAGE_ERROR, Gtk::BUTTONS_OK, true);
 
